Add Numerical Examples

--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -45,7 +45,7 @@
   title     = {Linear Algebra},
   author    = {Hoffman, Kenneth M. and Kunze, Ray A.},
   year      = 1971,
-  publisher = {Prentice-Halll Inc., Englewood Cliffs, New Jersey}
+  publisher = {Prentice-Hall Inc., Englewood Cliffs, New Jersey}
 }
 @book{demmel,
   author    = {Demmel, James W.},
@@ -76,6 +76,16 @@
 
 
 % Articles
+@article{hager1989update,
+  title     = {Updating the Inverse of a Matrix},
+  author    = {Hager, William W.},
+  year      = 1989,
+  journal   = {SIAM Review},
+  volume    = 31,
+  number    = 2,
+  pages     = {221--239},
+  publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
+}
 @article{golub2000eigenvalue,
   title     = {Eigenvalue computation in the 20th century},
   author    = {Golub, Gene H. and Van der Vorst, Henk A.},
