--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -24,7 +24,7 @@ backref, hyperref]{biblatex}%
 \pagestyle{scrheadings}
 
 % DRAFT PACKAGES
-%\usepackage{showlabels}
+% \usepackage{showlabels}
 
 \begin{document}
 
@@ -39,10 +39,10 @@ backref, hyperref]{biblatex}%
 \include{Chapters/02/Chapter02}
 \include{Chapters/03/Chapter03}
 
-% \begin{appendices}
-%   \include{Appendices/Proofs}
+\begin{appendices}
+  \include{Chapters/Appendices/Proofs} 
 %   \include{Appendices/Algorithms}
-% \end{appendices}
+\end{appendices}
 
 \printbibliography[heading=bibintoc]
 \end{document}
