--- a/LaTeX/mathsetup.tex
+++ b/LaTeX/mathsetup.tex
@@ -83,6 +83,7 @@
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\spr}{spr}
+%\DeclareMathOperator{\real}{real}
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
