--- a/LaTeX/preamble.tex
+++ b/LaTeX/preamble.tex
@@ -28,12 +28,14 @@
 \usepackage{amssymb}
 \usepackage{upgreek}
 \usepackage{bm}
+\usepackage{gensymb}
 
 % OTHER PACKAGES
 \usepackage{todonotes}
 \usepackage[ruled,vlined,resetcount,algochapter]{algorithm2e}
 \SetKwInput{KwData}{Input}
-
+\usepackage[labelformat=simple]{subcaption}
+\renewcommand\thesubfigure{(\alph{subfigure})}
 \usepackage{enumitem}
 
 % NEW DEFINITIONS AND OTHER SETUP
