Finished History and Convergence Chapters

--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -65,7 +65,7 @@
   address   = {London and New York}
 }
 @book{wilkinson,
-  author    = {Wilkinson, J. H.},
+  author    = {Wilkinson, James H.},
   title     = {The Algebraic Eigenvalue Problem},
   publisher = {Clarendon Press},
   address   = {Oxford},
@@ -76,6 +76,32 @@
 
 
 % Articles
+@article{simoncini2002rqi,
+  author  = {Simoncini, Valeria and Eld\'{e}n, Lars},
+  title   = {Inexact Rayleigh Quotient-Type Methods for Eigenvalue Computations},
+  year    = 2002,
+  volume  = 42,
+  number  = 1,
+  pages   = {159--182},
+  journal = {BIT Numerical Mathematics}
+}
+@article{notay2003rqi,
+  author  = {Notay, Yvan},
+  title   = {Convergence Analysis of Inexact Rayleigh Quotient Iteration},
+  year    = 2003,
+  volume  = 24,
+  number  = 23,
+  pages   = {627 -- 644},
+  journal = {{SIAM} Journal on Matrix Analysis and Applications}
+}
+@article{freitag2008rqi,
+  author  = {Freitag, Melina A. and Spence, Alastair},
+  title   = {Rayleigh quotient iteration and simplified Jacobi–Davidson method with preconditioned iterative solves},
+  journal = {Linear Algebra and its Applications},
+  year    = 2008,
+  pages   = {2049--2060},
+  volume  = {428}
+}
 @article{hager1989update,
   title     = {Updating the Inverse of a Matrix},
   author    = {Hager, William W.},
@@ -231,7 +257,7 @@
 }
 
 @article{petersWilkinson,
-  author  = {Peters, G and Wilkinson, James H.},
+  author  = {Peters, G. and Wilkinson, James H.},
   title   = {Inverse Iteration, Ill-Conditioned Equations and Newton’s Method},
   journal = {SIAM Review},
   volume  = 21,
