--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -29,7 +29,7 @@ backref, hyperref]{biblatex}%
 \begin{document}
 
 \include{titlepage}
-%\include{abstract}
+% \include{abstract}
 
 \cleardoublepage
 \tableofcontents
@@ -40,8 +40,8 @@ backref, hyperref]{biblatex}%
 \include{Chapters/03/Chapter03}
 
 \begin{appendices}
-  \include{Chapters/Appendices/Proofs} 
-%   \include{Appendices/Algorithms}
+  % \include{Chapters/Appendices/Proofs}
+  \include{Chapters/Appendices/Algorithms}
 \end{appendices}
 
 \printbibliography[heading=bibintoc]
