New folder structure for Chapter01, finished Chapter2 and added derivation of eigenvalue perturbation in motivation part of Chapter 3

--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -334,3 +334,32 @@
   year    = 1989
 }
 
+@article{marlettascheichl,
+  title   = {Eigenvalues in spectral gaps of differential operators},
+  author  = {Marco Marletta and Robert Scheichl},
+  year    = 2012,
+  volume  = 2,
+  journal = {Journal of Spectral Theory},
+  pages   = {293--320},
+  number  = 3
+}
+
+@article{marletta2010,
+  title   = {Neumann–Dirichlet maps and analysis of spectral pollution for non-self-adjoint elliptic PDEs with real essential spectrum},
+  author  = {Marco Marletta},
+  year    = 2010,
+  volume  = 30,
+  number  = 4,
+  pages   = {917–-939},
+  journal = {{IMA} Journal of Numerical Analysis}
+}
+
+@article{aceto2006,
+  title   = {Numerical computation of eigenvalues in spectral gaps of Sturm–Liouville operators},
+  journal = {Journal of Computational and Applied Mathematics},
+  volume  = 189,
+  number  = 1,
+  pages   = {453 -- 470},
+  year    = 2006,
+  author  = "Lidia Aceto and Paolo Ghelardoni and Marco Marletta",
+}
