Added examples in Chapter 03 and code for examples

--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -74,6 +74,12 @@
   editor    = {Goodwin, E. T. and Fox, L}
 }
 
+@manual{MATLAB,
+  year         = 2019,
+  organization = {The Mathworks, Inc.},
+  address      = {Natick, Massachusetts},
+  title        = {MATLAB version 9.6.0.1072779 (R2019a)}
+}
 
 % Articles
 @article{simoncini2002rqi,
@@ -130,6 +136,14 @@
   pages     = {51--94},
   title     = {\"{U}ber ein leichtes Verfahren die in der Theorie der S\"{a}cularst\"{o}rungen vorkommenden Gleichungen numerisch aufzul\"{o}sen},
   journal   = {Journal f\"{u}r die reine und angewandte Mathematik (Crelles Journal)}
+}
+@article{morgan1991interior,
+  title   = "Computing interior eigenvalues of large matrices",
+  journal = "Linear Algebra and its Applications",
+  volume  = "154-156",
+  pages   = "289 -- 309",
+  year    = "1991",
+  author  = "Ronald B. Morgan",
 }
 @article{tapia2018,
   year      = 2018,
