--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -43,7 +43,7 @@ backref, hyperref]{biblatex}%
 
 \begin{appendices}
   \include{Chapters/Appendices/Proofs}
-  \include{Chapters/Appendices/Algorithms}
+%  \include{Chapters/Appendices/Algorithms}
 \end{appendices}
 
 \printbibliography[heading=bibintoc]
