--- a/LaTeX/mathsetup.tex
+++ b/LaTeX/mathsetup.tex
@@ -94,7 +94,7 @@
 
 \newcommand*{\mat}[1]{\bm{#1}}
 \let\oldvec=\vec
-\renewcommand{\vec}[1]{\bm{#1}}
+\renewcommand{\vec}[1]{\mathbf{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% Theorem environments %%%%%%%%%%%%%%%%%%%%%
