--- a/todo.org
+++ b/todo.org
@@ -1,26 +1,18 @@
-* CHAPTER 1 [0%]
-** TODO Periodic Schrödinger example [0%]
-*** TODO Search in [Modern Physics IV] for examples (maybe with analytically computable Spectrum)?
-*** TODO Read Scheichl & Norton paper
-*** TODO Read Scheichl & Marletta paper
-*** TODO Implement Matlab example that demostrates the band structure of the spectrum
-*** TODO Try computing an eigenvalue using classic RQI
-*** TODO Try computing an eigenvalue using Complex RQI
-
-* CHAPTER 2 [44%]
+* CHAPTER 2 [66%]
 ** DONE Check the least squares derivation
 ** TODO Search References from spectral theorem in [Friedberg - Linear Algebra]
 ** TODO Search and add references that mention the "RQ is quadratically accurate"
-** DONE Rewrite the "Residual based error control" part (see Börm, maybe Saad?)
-*** DONE Describe how RQ can be used to provide stopping criterion for power iterations and mention that the eigenvalues converge faster than the eigenvectors
+** TODO Rewrite the "Residual based error control" part (see Börm, maybe Saad?)
+*** Describe how RQ can be used to provide stopping criterion for power iterations and mention that the eigenvalues converge faster than the eigenvectors
+*** Discuss problems with closely spaced eigenvalues
 ** DONE Remove example 2.5
-** TODO In history section, add recent contributions
-** TODO Describe that RQI and other methods do not incooporate the RHS (ie the eigenvector approximation)
+** DONE In history section, add recent contributions
+** DONE Describe that RQI and other methods do not incooporate the RHS (ie the eigenvector approximation)
 ** DONE Inside the proof of cubic convergence mentioned that we proofed the quadratic accuracy
-** TODO Read Ostrowski's other papers and add details to the History section
-* CHAPTER 3 [0%]
-** TODO Finish intro for chapter
-** TODO Rewrite the motiviation (make more concise)
+** DONE Read Ostrowski's other papers and add details to the History section
+* CHAPTER 3 [40%]
+** DONE Finish intro for chapter
+** DONE Rewrite the motiviation (make more concise)
 ** TODO Show that it doesnt matter if CRQI is applied to matrix with orth. projection or without
 *** TODO Show that (in exact arithmetic) the computed eigenvector and eigenvalue sequences are the same
 ** TODO Discuss Numerical Examples
@@ -29,8 +21,13 @@
 **** TODO Dependence on initial vector compared to classic RQI
 **** TODO Dependence on different initial shifts compared to classic RQI
 **** TODO How good does the eigenvector approximation need to be (Try eg. vector that is a weighted sum of exact eigenvector and random combination of remaining eigenvectors)
-
-* GENERAL [100%]
+** TODO Apply numerical examples to better test matrices (Wilkinson matrix etc)
+* GENERAL [50%]
 ** DONE Rename and sort papers, articles, books by topic
 ** DONE Revise current state of thesis and send to Rob and Alec 
    DEADLINE: <2020-03-30 Mon 12:00> 
+** TODO Write abstracts
+*** TODO German version
+*** TODO English version
+** TODO Add Matlab code to appendix
+
