--- a/LaTeX/meta.tex
+++ b/LaTeX/meta.tex
@@ -2,10 +2,10 @@
 %	THESIS INFORMATION
 % ------------------------------------------------------
 
-\newcommand{\thesistitle}{Using complex shifts in Rayleigh Quotient Iteration to compute close eigenvalues}
+\newcommand{\thesistitle}{Using Complex Shifts in Rayleigh Quotient Iteration to Compute Close Eigenvalues}
 \newcommand{\supervisor}{Prof.~Dr.~Robert Scheichl}
 \newcommand{\thesisauthor}{Nils Friess}
-\newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
+\newcommand{\university}{Ruprecht-Karls-University of Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
