--- a/LaTeX/meta.tex
+++ b/LaTeX/meta.tex
@@ -4,8 +4,8 @@
 
 \newcommand{\thesistitle}{Using Complex Shifts in Rayleigh Quotient Iteration to Compute Close Eigenvalues}
 \newcommand{\supervisor}{Prof.~Dr.~Robert Scheichl}
-\newcommand{\thesisauthor}{Nils Friess}
-\newcommand{\university}{Ruprecht-Karls-University of Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
+\newcommand{\thesisauthor}{Nils Frieß}
+\newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Fakultät für Mathematik und Informatik\\Institut für Angewandte Mathematik}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
