started writing abstracts

--- a/LaTeX/abstract.tex
+++ b/LaTeX/abstract.tex
@@ -1,10 +1,29 @@
 \thispagestyle{empty}
 \paragraph{Abstract\quad}
-\blindtext
-\selectlanguage{ngerman}
+Rayleigh Quotient Iteration (RQI) is an algorithm to compute an
+approximate eigenvector and corresponding eigenvalue of a real
+symmetric matrix. It is well-known that RQI exhibits local cubic
+convergence but the behaviour of the method is sometimes erratic.
+Even when started with accurate approximations of an eigenvalue, the
+algorithm might converge to a different eigenpair than the desired one
+and this becomes worse when the eigenvalues around the target are
+closely spaced. In this thesis we propose a modification of RQI 
+
+\selectlanguage{ngerman}%
+
 \vfill
+
 \paragraph{Zusammenfassung\quad}
-\blindtext
+Die Rayleigh-Quotient-Iteration (RQI) ist ein Algorithmus um einen
+Eigenvektor und zugehörigen Eigenwert einer reellen, symmetrischen
+Matrix zu berechnen. Es ist bekannt, dass RQI lokal kubisch
+konvergiert, jedoch ist das Verhalten der Methode bisweilen
+unberechenbar. Selbst wenn RQI mit guten Approximationen eines
+Eigenvektores ausgeführt wird, ist nicht sichergestellt, dass das
+berechnete Eigenpaar das gewünschte ist. Dieses Verhalten tritt
+besonders dann auf, wenn die Eigenwerte um den gesuchten Eigenwert
+einen sehr geringen Abstand zu diesem Eigenwert haben.
+
 \selectlanguage{english}
 %%% Local Variables:
 %%% mode: latex
