--- a/LaTeX/preamble.tex
+++ b/LaTeX/preamble.tex
@@ -70,6 +70,9 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \newcommand{\ul}[1]{\underline{#1}}
 
+\usepackage{chngcntr}
+\counterwithout{footnote}{chapter} 
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main" 
