Finished numerical experiments

--- a/LaTeX/preamble.tex
+++ b/LaTeX/preamble.tex
@@ -15,8 +15,8 @@
 % -----------------------------------------------------
 \automark[section]{chapter}
 
-\widowpenalty10000
-\clubpenalty10000
+%\widowpenalty500
+%\clubpenalty500
 
 \usepackage[hidelinks]{hyperref}  
 \hypersetup{pdftitle={Rayleigh Quotient Iteration}}
