--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -33,14 +33,7 @@ listof=totoc ]{scrreprt}
 \cleardoublepage%
 \setcounter{page}{1}
 \tableofcontents%
-
-\cleardoublepage%
-\addcontentsline{toc}{chapter}{List of Algorithms}%
-\listofalgorithms%
-
 \listoffigures%
-
-
 
 \cleardoublepage%
 \newpage%
@@ -54,7 +47,7 @@ listof=totoc ]{scrreprt}
 \begin{appendices}
   \include{Chapters/Appendices/Proofs}
   \include{Chapters/Appendices/Plots}
-  % \include{Chapters/Appendices/Algorithms}
+  \include{Chapters/Appendices/Algorithms}
 \end{appendices}
 
 \printbibliography[heading=bibintoc]
