--- a/LaTeX/preamble.tex
+++ b/LaTeX/preamble.tex
@@ -47,6 +47,12 @@
 \usepackage{pdflscape}
 \usepackage{blindtext}
 \usepackage{float}
+\usepackage[framed]{matlab-prettifier}
+
+\lstset{
+  style              = Matlab-editor,
+  basicstyle         = \mlttfamily
+}
 
 % NEW DEFINITIONS AND OTHER SETUP
 \newcommand{\HRule}{\rule{.9\linewidth}{.6pt}}
