--- a/LaTeX/declaration.tex
+++ b/LaTeX/declaration.tex
@@ -2,10 +2,8 @@
 \selectlanguage{ngerman}%
 Ich versichere hiermit, dass ich die vorliegende Arbeit selbständig
 verfasst und keine anderen als die angegebenen Hilfsmittel benutzt
-habe. Sowohl inhaltlich als auch wörtlich entnommene Inhalte wurden
-als solche kenntlich gemacht. Die Arbeit ist in gleicher oder
-vergleichbarer Form noch bei keiner anderen Prüfungsbehörde
-eingereicht worden.%
+habe. Sowohl indirekt als auch direkt entnommene Inhalte wurden als
+solche kenntlich gemacht.%
 \vspace{1cm}%
 
 \noindent
