--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -6,8 +6,8 @@
   year      = 2014,
   publisher = {Pearson Education},
   }
-@book{borm2012,
-  title     = {Numerical methods for eigenvalue problems},
+@book{boerm,
+  title     = {Numerical Methods for Eigenvalue Problems},
   author    = {Börm, Steffen and Mehl, Christian},
   year      = 2012,
   publisher = {Walter de Gruyter},
@@ -16,8 +16,10 @@
 @book{saad2011,
   author    = {Saad, Yousef},
   title     = {Numerical Methods for Large Eigenvalue Problems},
-  publisher = {Society for Industrial and Applied Mathematics},
-  year      = 2011
+  publisher = {SIAM},
+  year      = 2011,
+  series    = {Classics in Applied Mathematics},
+  edition   = {Second Edition}
 }
 @book{Parlett1998,
   author    = {Parlett, Beresford N.},
@@ -36,7 +38,7 @@
 }
 @book{trefethen1997,
   author    = {Trefethen, Lloyd N. and Bau, David},
-  title     = {Numerical linear algebra},
+  title     = {Numerical Linear Algebra},
   publisher = {Society for Industrial and Applied Mathematics},
   year      = 1997,
   series    = {Other titles in applied mathematics},
@@ -71,7 +73,7 @@
   address   = {Oxford},
   year      = 1965,
   series    = {Monographs On Numerical Analysis},
-  editor    = {Goodwin, E. T. and Fox, L}
+  editor    = {Goodwin, E. T. and Fox, L.}
 }
 
 @manual{MATLAB,
@@ -111,7 +113,7 @@
 }
 @article{freitag2008rqi,
   author  = {Freitag, Melina A. and Spence, Alastair},
-  title   = {Rayleigh quotient iteration and simplified Jacobi–Davidson method with preconditioned iterative solves},
+  title   = {Rayleigh Quotient Iteration and Simplified Jacobi–Davidson Method with Preconditioned Iterative Solves},
   journal = {Linear Algebra and its Applications},
   year    = 2008,
   pages   = {2049--2060},
@@ -128,7 +130,7 @@
   publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
 }
 @article{golub2000eigenvalue,
-  title     = {Eigenvalue computation in the 20th century},
+  title     = {Eigenvalue Computation in the 20th Century},
   author    = {Golub, Gene H. and Van der Vorst, Henk A.},
   journal   = {Journal of Computational and Applied Mathematics},
   volume    = 123,
@@ -147,7 +149,7 @@
   journal   = {Journal f\"{u}r die reine und angewandte Mathematik (Crelles Journal)}
 }
 @article{morgan1991interior,
-  title   = "Computing interior eigenvalues of large matrices",
+  title   = "Computing Interior Eigenvalues of Large Matrices",
   journal = "Linear Algebra and its Applications",
   volume  = "154-156",
   pages   = "289 -- 309",
@@ -161,7 +163,7 @@
   number    = 1,
   pages     = {3--55},
   author    = {Richard A. Tapia and J. E. Dennis and Jan P. Sch\"{a}fermeyer},
-  title     = {Inverse, Shifted Inverse, and Rayleigh Quotient Iteration as Newtons Method},
+  title     = {Inverse, Shifted Inverse, and Rayleigh Quotient Iteration as Newton's Method},
   journal   = {{SIAM} Review}
 }
 
@@ -188,7 +190,7 @@
 
 @article{crandall,
   author  = {Crandall, Stephen H.  and Southwell, Richard Vynne },
-  title   = {Iterative procedures related to relaxation methods for eigenvalue problems},
+  title   = {Iterative Procedures Related to Relaxation Methods for Eigenvalue Problems},
   journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
   volume  = 207,
   number  = 1090,
@@ -198,7 +200,7 @@
 
 @article{ostrowskiI,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. I},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. I},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 1,
   number     = 1,
@@ -209,7 +211,7 @@
 
 @article{ostrowskiII,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. II},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. II},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 2,
   number     = 1,
@@ -220,7 +222,7 @@
 
 @article{ostrowskiIII,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. III},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. III},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 3,
   number     = 1,
@@ -231,7 +233,7 @@
 
 @article{ostrowskiIV,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. IV},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. IV},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 3,
   number     = 1,
@@ -242,7 +244,7 @@
 
 @article{ostrowskiV,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. V},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. V},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 3,
   number     = 1,
@@ -253,7 +255,7 @@
 
 @article{ostrowskiVI,
   author     = {Ostrowski, Alexander M.},
-  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. VI},
+  title      = {On the Convergence of the Rayleigh Quotient Iteration for the Computation of the Characteristic Roots and Vectors. VI},
   journal    = {Archive for Rational Mechanics and Analysis},
   volume     = 4,
   number     = 1,
@@ -269,14 +271,6 @@
   institution = {Aerodynamische Versuchsanstalt Göttingen},
   year        = 1944,
   type        = {~}
-  }
-
-@misc{boerm,
-  title  = {Numerik von Eigenwertaufgaben},
-  author = {Steffen Börm},
-  url    = {https://www.informatik.uni-kiel.de/~sb/data/Eigenwerte.pdf},
-  year   = "2018 (Last accessed: 14 March 2020)",
-  type   = {Lecture notes}
 }
 
 @article{petersWilkinson,
@@ -300,10 +294,9 @@
 }
 
 @inproceedings{parlettkahan,
-  author    = {Beresford N. Parlett and
-               William Kahan},
+  author    = {Beresford N. Parlett and William Kahan},
   editor    = {A. J. H. Morrel},
-  title     = {On the convergence of a practical {QR} algorithm},
+  title     = {On the Convergence of a Practical {QR} Algorithm},
   booktitle = {Information Processing, Proceedings of {IFIP} Congress 1968, Edinburgh,
                UK, 5-10 August 1968, Volume 1 - Mathematics, Software},
   pages     = {114--118},
@@ -312,7 +305,7 @@
 
 @article{pantazisszyld,
   author  = {Pantazis, Ricardo D. and Szyld, Daniel B.},
-  title   = {Regions of convergence of the Rayleigh quotient iteration method},
+  title   = {Regions of Convergence of the Rayleigh Quotient Iteration Method},
   journal = {Numerical Linear Algebra with Applications},
   volume  = 2,
   number  = 3,
@@ -343,7 +336,7 @@
 @phdthesis{rommes,
   author = {Rommes, Joost},
   year   = 2007,
-  title  = {Methods for eigenvalue problems with applications in model order reduction},
+  title  = {Methods for Eigenvalue Problems with Applications in Model Order Reduction},
   school = {Utrecht University}
 }
 
@@ -358,7 +351,7 @@
 }
 
 @article{marlettascheichl,
-  title   = {Eigenvalues in spectral gaps of differential operators},
+  title   = {Eigenvalues in Spectral Gaps of Differential Operators},
   author  = {Marco Marletta and Robert Scheichl},
   year    = 2012,
   volume  = 2,
@@ -368,7 +361,7 @@
 }
 
 @article{marletta2010,
-  title   = {Neumann–Dirichlet maps and analysis of spectral pollution for non-self-adjoint elliptic PDEs with real essential spectrum},
+  title   = {Neumann–Dirichlet Maps and Analysis of Spectral Pollution for non-self-adjoint Elliptic PDEs with Real Essential Spectrum},
   author  = {Marco Marletta},
   year    = 2010,
   volume  = 30,
@@ -378,7 +371,7 @@
 }
 
 @article{aceto2006,
-  title   = {Numerical computation of eigenvalues in spectral gaps of Sturm–Liouville operators},
+  title   = {Numerical Computation of Eigenvalues in Spectral Gaps of Sturm–Liouville Operators},
   journal = {Journal of Computational and Applied Mathematics},
   volume  = 189,
   number  = 1,
@@ -389,7 +382,7 @@
 
 @techreport{galligani,
   author      = {I. Galligani},
-  title       = {A comparison of methods for computing the eigenvalues and eigenvectors of a matrix},
+  title       = {A Comparison of Methods for Computing the Eigenvalues and Eigenvectors of a Matrix},
   year        = 1968,
   institution = {European Atomic Energy Community -- Euratom}
 }
