--- a/LaTeX/abstract.tex
+++ b/LaTeX/abstract.tex
@@ -29,7 +29,7 @@ berechnete Eigenpaar das gewünschte ist. Dieses Verhalten tritt
 besonders dann auf, wenn die Eigenwerte um den gesuchten Eigenwert
 einen sehr geringen Abstand zu diesem Eigenwert aufweisen. In dieser
 Arbeit schlagen wir eine Abwandlung von RQI vor, die sicherstellt,
-dass die Methode das gewünschten Eigenpaar berechnet, vorausgesetzt
+dass die Methode das gewünschten Eigenpaar berechnet, vorausgesetzt,
 der Winkel zwischen Anfangsvektor und dem Ziel-Eigenvektor ist
 hinreichend klein. Numerische Beispiele weisen darauf hin, dass
 \glqq{}hinreichend klein\grqq{} bedeutet, dass der Winkel ungefähr
