Fixed some typos

--- a/LaTeX/abstract.tex
+++ b/LaTeX/abstract.tex
@@ -2,7 +2,7 @@
 \noindent\textsc{Abstract}\qquad
 Rayleigh Quotient Iteration (RQI) is an algorithm to compute an
 approximate eigenvector and corresponding eigenvalue of a real
-symmetric matrix. It is well-known that RQI exhibits local cubice
+symmetric matrix. It is well-known that RQI exhibits local cubic
 convergence but the behaviour of the method is sometimes erratic.
 Even when started with accurate approximations of an eigenvector, the
 algorithm might converge to a different eigenpair than the desired one
