--- a/LaTeX/declaration.tex
+++ b/LaTeX/declaration.tex
@@ -7,7 +7,7 @@ solche kenntlich gemacht.%
 \vspace{1cm}%
 
 \noindent
-Heidelberg, den \today \vspace{3.5cm}%
+Heidelberg, den 27. Mai 2020 \vspace{3.5cm}%
 
 \hfill (Nils Frieß) \hspace{2cm}
 
