Finished for submission

--- a/LaTeX/declaration.tex
+++ b/LaTeX/declaration.tex
@@ -1,9 +1,9 @@
 \chapter*{Erklärung}\thispagestyle{empty}%
 \selectlanguage{ngerman}%
 Ich versichere hiermit, dass ich die vorliegende Arbeit selbständig
-verfasst und keine anderen als die angegebenen Hilfsmittel benutzt
-habe. Sowohl indirekt als auch direkt entnommene Inhalte wurden als
-solche kenntlich gemacht.%
+verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel
+benutzt habe. Sowohl indirekt als auch direkt entnommene Inhalte
+wurden als solche kenntlich gemacht.%
 \vspace{1cm}%
 
 \noindent
