--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -4,8 +4,11 @@ paper        = a4,%
 numbers      = noenddot,%
 % parskip      = half,
 DIV = calc,%
-BCOR = 5mm, headsepline,%
-listof=totoc ]{scrreprt}
+%BCOR = 5mm,%
+headsepline,%
+listof=totoc%,
+final
+]{scrreprt}
 
 \usepackage[utf8]{inputenc}%
 \usepackage[T1]{fontenc}
